<resources>
    <string name="app_name">FitDuel</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="facebook_app_id">Enter id here</string>
    <string name="fb_login_protocol_scheme">Enter protocol scheme here</string>
    <string name="nav_home">Home</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_profile">Profile</string>
    <string name="select_amount">Select Amount:</string>
    <string name="account_balance">Account Balance</string>
    <string name="balance_amount">$0.0</string>
    <string name="add_funds">Add Funds</string>
    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="exit">EXIT</string>
    <string name="divider">divider</string>
    <string name="title_activity_login">Sign in</string>

    <!--Steps value to win the challenge-->
    <string name="stepsToWin">20</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="value_10">$10</string>
    <string name="value_25">$25</string>
    <string name="value_50">$50</string>
    <string name="value_100">$100</string>
    <string name="select_payment_method">Enter card details</string>
    <string name="card_template">Card template</string>
    <string name="go">GO</string>
    <string name="ok">OK</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="success_login">Login successful</string>
    <string name="please_wait">Please wait...</string>
    <string name="available_balance">Available Balance</string>
    <string name="user_name">User name</string>
    <string name="info">User Info</string>
    <string name="server_error">Server Error</string>
    <string name="home_fragment">home fragment</string>
    <string name="email">Email</string>
    <string name="rules">RULES</string>
    <string name="start_challenge">START CHALLENGE</string>
    <string name="stop_challenge">STOP CHALLENGE</string>
    <string name="get_fit_now">GET FIT NOW</string>
    <string name="nameLabel">NAME:</string>
    <string name="nameValue">CHALLENGE 1</string>
    <string name="end_timeLabel">END-TIME:</string>
    <string name="_8_00_pm">8:00 PM</string>
    <string name="fees">FEES:</string>
    <string name="_5">$5</string>
    <string name="award">AWARD:</string>
    <string name="_10">$10</string>
    <string name="min_footsteps">MIN. FOOTSTEPS:</string>
    <string name="_0">0</string>
    <string name="max_footsteps">MAX. FOOTSTEPS:</string>

    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="exit_msg">Are you sure you want to exit?</string>
    <string name="cancel">CANCEL</string>
    <string name="success">Registration successful</string>
    <string name="contact">Profile Information</string>
    <string name="alert">Alert</string>
    <string name="successfully_added">Funds successfully added to the account</string>
    <string name="withdraw_success">Fund withdraw successful</string>
    <string name="processing">Processing...</string>
    <string name="card_details">Please enter the card details</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="logout_button">LOGOUT</string>
    <string name="start_time">START-TIME:</string>
    <string name="fitness_showdown">FITNESS SHOWDOWN</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="channel_name">notify</string>
    <string name="channel_description">fitduel notification</string>
</resources>
