<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fitness.fitduel.AddFundsFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/tableRowStyle"
            android:layout_marginTop="15dp"
            android:text="@string/select_amount" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="10dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/value_10"
                    style="@style/tableRowStyle"
                    android:layout_column="0"
                    android:background="@drawable/rounded_textview"
                    android:text="@string/value_10" />

                <TextView
                    android:id="@+id/value_25"
                    style="@style/tableRowStyle"
                    android:layout_column="1"
                    android:background="@drawable/rounded_textview"
                    android:text="@string/value_25" />

                <TextView
                    android:id="@+id/value_50"
                    style="@style/tableRowStyle"
                    android:layout_column="2"
                    android:background="@drawable/rounded_textview"
                    android:text="@string/value_50" />

                <TextView
                    android:id="@+id/value_100"
                    style="@style/tableRowStyle"
                    android:layout_column="3"
                    android:background="@drawable/rounded_textview"
                    android:text="@string/value_100" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/select_payment"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tableLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button"
            android:padding="20dp"
            android:text="@string/select_payment_method" />

    </RelativeLayout>

</FrameLayout>
