<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startChallengeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        app:srcCompat="@drawable/running_logo"
        android:contentDescription="@string/app_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/rules"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cardview_dark_background" />

    <ScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="223dp">

        <TextView
            android:id="@+id/rulesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:lineSpacingExtra="2sp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </ScrollView>

    <Button
        android:id="@+id/startChallengeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@color/com_facebook_messenger_blue"
        android:text="@string/start_challenge"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/stopChallengeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@color/com_facebook_messenger_blue"
        android:text="@string/stop_challenge" />


</LinearLayout>
