<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_mail_outline_black_18dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/phoneNumber" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_vpn_key_black_18dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusForward="@+id/family_name" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:onClick="btnUserLogin_Click"
            android:padding="10dp"
            android:text="@string/login" />

    </LinearLayout>
</ScrollView>