<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.fitness.fitduel.ProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.052083332" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9557292" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="139dp"
            android:layout_marginTop="116dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="208dp"
            android:background="@drawable/profile_bg"
            android:contentDescription="@string/nav_profile"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.48"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/info"
            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/account_balance"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/balance_amount"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
