<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fitness.fitduel.AccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="50dp"
            android:text="@string/account_balance"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_funds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_attach_money"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_funds"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_funds"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="19dp"
            android:width="@dimen/funds_width"
            android:background="@drawable/rounded_button"
            android:text="@string/add_funds"
            android:textStyle="bold" />

        <Button
            android:id="@+id/withdraw_funds"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_funds"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:width="270dp"
            android:background="@drawable/rounded_button"
            android:text="@string/withdraw_funds"
            android:textStyle="bold" />


    </RelativeLayout>


</FrameLayout>
